# clipcara

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
clipcara/: __main__.py  loops.py  main_window.py  player.py  timeline.py
icons/: clipcara.icns
player/: main_window.py  player.py  timeline.py
tests/: conftest.py  test_export.py  test_loader.py  test_loops.py  test_player.py  test_timeline.py  test_window.py
