[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipcara"
version = "0.1.0"
description = "A-B loop audio player"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
clipcara = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["player"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
