[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "clipcara"
version = "0.1.0"
description = "A-B loop audio player"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
clipcara = "clipcara.__main__:main"

[tool.setuptools]
packages = ["clipcara"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.briefcase]
project_name = "Clipcara"
bundle = "io.github.docuinn-mw"
version = "0.1.0"
license.file = "LICENSE"

[tool.briefcase.app.clipcara]
formal_name = "Clipcara"
description = "A-B loop audio player"
icon = "icons/clipcara"
sources = ["clipcara"]
requires = [
    "PyQt6>=6.5",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[tool.briefcase.app.clipcara.macOS]
universal_build = false
